# sh3-sat-exageostat

./: README.md  ReadMe_For_Vendors  clean.sh  install_exageostat.sh  job.template  launchall
exageostat_parsec/: CMakeLists.txt  erase.sh  interleave.sh
exageostat_parsec/cudacore/compute/: cuda_zcmg.cu  cuda_zscale.cu  cuda_zshift.cu
exageostat_parsec/cudacore/include/: exageostatcudacore.h
exageostat_parsec/dplasma/cmake_modules/: DplasmaCompilerFlags.cmake
exageostat_parsec/dplasma/parsec/cmake_modules/: ParsecCompilerFlags.cmake
exageostat_parsec/dplasma/parsec/parsec/: bindthread.c  parsec.c  remote_dep_mpi.c  scheduling.c
exageostat_parsec/dplasma/parsec/parsec/fortran/: parsecf.F90
exageostat_parsec/dplasma/parsec/parsec/include/parsec/: parsec_config_bottom.h
exageostat_parsec/dplasma/parsec/parsec/interfaces/ptg/ptg-compiler/: parsec.y
exageostat_parsec/exageostat_approx/src/compute/: MLE_approx.c  MLE_lr.c
exageostat_parsec/exageostat_approx/src/include/: MLE_lr.h
exageostat_parsec/exageostat_exact/core/compute/: core_dlag2s.c  core_slag2d.c  core_zcmg.c  core_zdotp.c  core_zscale.c  core_zshift.c  core_ztrace.c
exageostat_parsec/exageostat_exact/core/include/: exageostatcore.h
exageostat_parsec/exageostat_exact/parsec/: CMakeLists.txt  CMakeLists_my.txt  CMakeLists_original.txt  Lapack_to_Tile.jdf  MLE_dtrace.jdf  band_allocate.jdf  band_convert_d2s.jdf  band_convert_s2d.jdf  band_elem_set.jdf  common_timing.h  dZ_generation.jdf  dZ_sum.jdf  dmatrix_avg.jdf  dmatrix_det.jdf  dmatrix_dot.jdf  dmatrix_generation.jdf  dmatrix_init.jdf  dmatrix_ratio_error_half.jdf  dmatrix_ratio_exceed_half.jdf  dmatrix_scale.jdf  dmatrix_set_diagonal.jdf  dmatrix_shift.jdf  dmatrix_sum.jdf  get_zobs.jdf  hsdpotrf_L.jdf  hsdpotrf_L_4taskclass.jdf  hsdpotrf_L_4taskclass_wrapper.c  hsdpotrf_L_band.jdf  hsdpotrf_L_band_wrapper.c  hsdpotrf_L_trsm_convert.jdf  hsdpotrf_L_trsm_convert_wrapper.c  hsdpotrf_L_wrapper.c  install_exageostat.sh  mix_precision_internal.c  mix_precision_internal.cu  mix_precision_internal.h  mse_calculation.jdf  my_dtrmv.jdf  my_dtrsm_LLN.jdf  my_dtrsm_wrapper.c  (+12 more)
exageostat_parsec/exageostat_exact/runtime/starpu/codelets/: codelet_exageostat_sgemm.c  codelet_exageostat_strsm.c  codelet_sdmat_reg.c  codelet_zcmg.c  codelet_zdotp.c  codelet_zscale.c  codelet_zshift.c  codelet_ztrace.c
exageostat_parsec/exageostat_exact/runtime/starpu/include/: starpu_exageostat.h
exageostat_parsec/exageostat_exact/src/compute/: MLE_exact.c  MLE_exact_s.c  MLE_sdexact.c  sdpotrf.c
exageostat_parsec/examples/: CMakeLists.txt  SOIL_MOISTURE_LOCS_TESTING_1K  SOIL_MOISTURE_LOCS_TRAINING_9K  SOIL_MOISTURE_TESTING_1K  SOIL_MOISTURE_TRAINING_9K  examples.c  examples.h  real_csv_dmle_test.c  synthetic_dmle_locs_rwrapper_test.c  synthetic_dmle_rwrapper_test.c  synthetic_dmle_test.c  synthetic_sdmle_test.c  synthetic_smle_test.c
exageostat_parsec/hicma/chameleon/cmake_modules/morse_cmake/modules/: RulesPrecisions.cmake
exageostat_parsec/hicma/chameleon/cmake_modules/morse_cmake/modules/precision_generator/: Conversion.py  genDependencies.py  subs.py
exageostat_parsec/hicma/chameleon/coreblas/compute/: core_zgemm.c
exageostat_parsec/hicma/chameleon/hqr/: CMakeLists.txt
exageostat_parsec/hicma/chameleon/hqr/cmake_modules/: GenHQRPkgConfig.cmake
exageostat_parsec/hicma/chameleon/hqr/include/: libhqr_internal.h  libhqr_queue.h
exageostat_parsec/hicma/chameleon/hqr/src/: check.c  gendot.c  gensvg.c  high_binary.c  high_fibonacci.c  high_flat.c  high_greedy.c  hqr.c  low_adaptiv.c  low_binary.c  low_fibonacci.c  low_flat.c  low_greedy.c  low_greedy1p.c  mtxtree.c  queue.c  svd.c  systolic.c  treedraw.c
exageostat_parsec/hicma/chameleon/hqr/testings/: CMakeLists.txt  common.c  common.h
exageostat_parsec/misc/compute/: MLE_misc.c  flat_file.c
exageostat_parsec/misc/include/: MLE_misc.h  flat_file.h
exageostat_parsec/misc_scripts/: build-gpu-mpi-ibex.sh  build-openmpi-openblas-cuda10-starpu1.8-ibex.sh
exageostat_parsec/r-wrappers/compute/: rwrappers.c
exageostat_parsec/r-wrappers/include/: rwrappers.h
exageostat_parsec/scripts/: compile_on_summit.sh
exageostat_parsec/src/compute/: MLE.c
exageostat_parsec/src/include/: MLE.h
